<resources>
    <string name="app_name">Study App</string>
    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>

    <string name="action_move_sign_up">Sign Up</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign Up</string>

    <string name="main_text">or</string>

    <string name="action_move_sign_in">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>

    <string name="action_move_sign_out">Sign out</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_short">Sign out</string>

    <string name="action_reservation">예약</string>
    <string name="action_seat">자리</string>
    <string name="action_voucher">이용권</string>
    <string name="action_notice">게시판</string>

    <string name="action_qna">문의</string>
    <string name="action_announ">공지사항</string>

    <string name="action_voucher_day">개인일일이용권</string>
    <string name="action_voucher_time">개인시간이용권</string>
    <string name="action_voucher_group4">단체이용권 4인</string>
    <string name="action_voucher_group6">단체이용권 6인</string>
    <string name="action_voucher_day_2">2시간</string>
    <string name="action_voucher_day_4">4시간</string>
    <string name="action_voucher_day_6">6시간</string>
    <string name="action_voucher_day_8">8시간</string>
    <string name="action_voucher_day_12">12시간</string>
    <string name="action_voucher_time_30">30시간</string>
    <string name="action_voucher_time_50">50시간</string>
    <string name="action_voucher_time_100">100시간</string>
    <string name="action_voucher_time_200">200시간</string>
    <string name="action_voucher_group4_2">2시간</string>
    <string name="action_voucher_group4_4">4시간</string>
    <string name="action_voucher_group4_6">6시간</string>
    <string name="action_voucher_group6_2">2시간</string>
    <string name="action_voucher_group6_4">4시간</string>
    <string name="action_voucher_group6_6">6시간</string>



    <string name="hint_sign_id">아이디를 입력하세요</string>
    <string name="sign_id">아이디를 입력하세요</string>
    <string name="hint_sign_password">패스워드를 입력하세요</string>
    <string name="sign_password">패스워드를 입력하세요</string>
    <string name="hint_sign_name">이름을 입력하세요</string>
    <string name="sign_name">이름을 입력하세요</string>
    <string name="hint_sign_birth">생년월일을 입력하세요</string>
    <string name="sign_birth">생년월일을 입력하세요</string>
    <string name="hint_sign_num">전화번호를 입력하세요</string>
    <string name="sign_num">전화번호를 입력하세요</string>
    <string name="hint_sign_email">이메일을 입력하세요</string>
    <string name="sign_email">이메일을 입력하세요</string>
    <string name="btn_sign">Complete</string>
</resources>