<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/action_voucher"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gr_voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/voucher_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day" />

        <RadioButton
            android:id="@+id/voucher_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_time" />

        <RadioButton
            android:id="@+id/voucher_group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_group4" />

        <RadioButton
            android:id="@+id/voucher_group6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_group6" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/gr_voucher_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/gr_voucher"
        app:layout_constraintTop_toBottomOf="@+id/gr_voucher">

        <RadioButton
            android:id="@+id/voucher_day_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day_2" />

        <RadioButton
            android:id="@+id/voucher_day_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day_4" />

        <RadioButton
            android:id="@+id/voucher_day_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day_6" />

        <RadioButton
            android:id="@+id/voucher_day_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day_8" />

        <RadioButton
            android:id="@+id/voucher_day_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_voucher_day_12" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>