<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".loginfrom">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="144dp">

        <EditText
            android:id="@+id/id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:hint="ID"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginBottom="40dp"
            tools:layout_editor_absoluteY="223dp" />

        //Sign in 버튼 눌린 후 home으로 넘어가야 함
        <Button
            android:id="@+id/btn_loginform_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="341dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        //로그인
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text"
            tools:layout_editor_absoluteX="52dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        //회원가입
        <Button
            android:id="@+id/btn_loginform_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/action_sign_up"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="479dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>